#搞掂了一些琐碎的东西

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="me">ME</string>
     
     <string name="network_error">网络错误</string>
+    <string name="loading">加载中</string>
+    <string name="no_more_content">暂无更多内容</string>
 </resources>
