--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
     <string name="music">音乐</string>
     <string name="movie">影视</string>
     <string name="radio">电台</string>
+
+    <string name="read_">-阅读-</string>
+    <string name="serialize_">-连载-</string>
+    <string name="qa_">-问答-</string>
+    <string name="music_">-音乐-</string>
+    <string name="movie_">-影视-</string>
+    <string name="radio_">-电台-</string>
 </resources>
