--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="me">ME</string>
 
     <!--view message-->
-    <string name="network_error">网络错误</string>
+    <string name="network_error">数据格式或网络错误</string>
+    <string name="no_network">请链接网络</string>
     <string name="loading">加载中</string>
     <string name="no_more_content">暂无更多内容</string>
     <string name="pause">配图</string>
