--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">one</string>
+    <string name="app_name">OneApp</string>
 
     <string name="one">ONE</string>
     <string name="all">ALL</string>
